--- a/src/stories/Blocks/find-library-dialog/find-library-dialog.scss
+++ b/src/stories/Blocks/find-library-dialog/find-library-dialog.scss
@@ -43,7 +43,6 @@
   text-align: left;
   outline: none;
   min-height: 92px;
-  align-items: center;
 
   &:focus,
   &:hover,
