--- a/src/stories/Blocks/library-select/library-select.scss
+++ b/src/stories/Blocks/library-select/library-select.scss
@@ -1,3 +1,28 @@
+.library-select-button-wrapper {
+  @include typography($typo__body-medium);
+  display: flex;
+  flex-direction: column;
+  gap: $s-sm;
+
+  label {
+    @include typography($typo__body-medium);
+    color: $color__text-secondary-gray;
+  }
+}
+
+.library-select-button-wrapper__description {
+  color: $color__text-secondary-gray;
+  @include typography($typo__body-small);
+}
+
+.library-select-button__hidden-input {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
 .library-select-button {
   border: 1px solid $color__global-tertiary-1;
   padding: 16px;
@@ -7,6 +32,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 92px;
+  position: relative;
 
   &:focus,
   &:hover {
